<resources>
    <!-- GENERAL -->
    <string name="app_name">AutoLogs</string>
    <string name="app_vehicles">Vehicles</string>
    <string name="app_logs">Logs</string>
    <string name="app_stats">Statistics</string>
    <string name="app_date">Date</string>
    <string name="save_cta">Save</string>
    <string name="new_cta">New</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- LOGIN -->
    <string name="email_cta">Email</string>
    <string name="password_cta">Password</string>
    <string name="login_cta">Login</string>
    <string name="logout_cta">Logout</string>
    <string name="signup_cta">Sign Up</string>

    <!-- SIGNUP -->
    <string name="first_name_cta">First Name</string>
    <string name="last_name_cta">Last Name</string>
    <string name="password_confirm_cta">Confirm Password</string>
    <string name="nickname_cta">Nickname (Optional)</string>
    <string name="description_cta">Description (Optional)</string>

    <!-- LOGS -->
    <string name="no_logs">No Logs To Display</string>

    <!-- LOG -->
    <string name="no_data">No Logs Available</string>
    <string name="log">Log</string>
    <string name="log_id">logId</string>
    <string name="log_miles">Miles</string>
    <string name="log_miles_cta">Miles (ODO)</string>
    <string name="log_fillup_amount">Fillup Amount</string>
    <string name="log_fillup_amount_cta">Fillup Amount (GA)</string>
    <string name="log_fillup_cost">Fillup Cost</string>
    <string name="log_fillup_cost_cta">Fillup Cost ($)</string>
    <string name="log_note">Note</string>
    <string name="log_location">Location</string>

    <!-- VEHICLES -->
    <string name="no_vehicles">No Vehicles To Display</string>

    <!-- VEHICLE -->
    <string name="vehicle_id">vehicleId</string>
    <string name="vehicle">Vehicle</string>
    <string name="make_cta">Make</string>
    <string name="model_cta">Model</string>
    <string name="year_cta">Year (Optional)</string>
    <!--<string name="nickname_cta">Nickname (Optional)</string>-->
    <!--<string name="description_cta">Description (Optional)</string>-->

    <!-- STATS -->
    <string name="stats_no_data">No Reports Available</string>


    <!-- CONSTANTS -->
    <string name="PREFERENCES_USER_DATA">io.mattalui.autologs.USER_SHARED_PREFERENCES</string>
    <string name="CONSTANTS_USERTOKEN">io.mattalui.autologs.USERTOKEN</string>
    <string name="CONSTANTS_USERDATA">io.mattalui.autologs.USERDATA</string>
</resources>
